    --taskmastertrace.

  - Document (in both man page and User's Guide) that --implicit-cache
    ignores changes in $CPPPATH, $LIBPATH, etc.

  From Jean-Baptiste Lab:

  - Remove hard-coded dependency on Python 2.2 from Debian packaging files.

  From Jeff Mahovsky:

  - Handle spaces in the build target name in Visual Studio project files.

  From Joel B. Mohler:

  - Make additional TeX auxiliary files (.toc, .idx and .bbl files)
    Precious so their removal doesn't affect whether the necessary
    sections are included in output PDF or PostScript files.

  From Gary Oberbrunner:

  - Fix the ability to import modules in the site_scons directory from
    a subdirectory.

  From Adam Simpkins:

  - Make sure parallel (-j) builds all targets even if they show up
    multiple times in the child list (as a source and a dependency).

  From Matthias Troffaes:

  - Don't re-run TeX if the triggering strings (\makeindex, \bibliography
    \tableofcontents) are commented out.

  From Richard Viney:

  - Fix use of custom include and lib paths with Visual Studio 8.

  - Select the default .NET Framework SDK Dir based on the version of
    Visual Studio being used.



RELEASE 0.96.95 - Mon, 12 Feb 2007 20:25:16 -0600

  From Anatoly:

  - Add the scons.org URL and a package description to the setup.py
    arguments.

  - Have the Windows installer add a registry entry for scons.bat in the
    "App Paths" key, so scons.bat can be executed without adding the
    directory to the %PATH%.  (Python itself works this way.)

  From Anonymous:

  - Fix looking for default paths in Visual Studio 8.0 (and later).

  - Add -lm to the list of default D libraries for linking.

  From Matt Doar:

  - Provide a more complete write-your-own-Scanner example in the man page.

  From Ralf W. Grosse-Kunstleve:

  - Contributed upstream Python change to our copied subprocess.py module
    for more efficient standard input processing.

  From Steven Knight:
