@@ -76,6 +76,24 @@ def InternalLaTeXAuxAction(XXXLaTeXAction, target = None, source= None, env=None
     basename = SCons.Util.splitext(str(source[0]))[0]
     basedir = os.path.split(str(source[0]))[0]
 
+    # Notice that all the filenames are not prefixed with the basedir.
+    # That's because the *COM variables have the cd command in the prolog.
+
+    bblfilename = basename + '.bbl'
+    bblContents = ""
+    if os.path.exists(bblfilename):
+        bblContents = open(bblfilename, "rb").read()
+
+    idxfilename = basename + '.idx'
+    idxContents = ""
+    if os.path.exists(idxfilename):
+        idxContents = open(idxfilename, "rb").read()
+
+    tocfilename = basename + '.toc'
+    tocContents = ""
+    if os.path.exists(tocfilename):
+        tocContents = open(tocfilename, "rb").read()
+
     # Run LaTeX once to generate a new aux file.
     XXXLaTeXAction(target, source, env)
 
@@ -100,21 +118,26 @@ def InternalLaTeXAuxAction(XXXLaTeXAction, target = None, source= None, env=None
                 BibTeXAction(bibfile, bibfile, env)
                 break
 
-    # Now decide if makeindex will need to be run.
-    idxfilename = basename + '.idx'
-    if os.path.exists(idxfilename):
-        idxfile = env.fs.File(basename)
-        # TODO: if ( idxfile has changed) ...
-        MakeIndexAction(idxfile, idxfile, env)
-        XXXLaTeXAction(target, source, env)
-
+    must_rerun_latex = 0
     # Now decide if latex will need to be run again due to table of contents.
-    tocfilename = basename + '.toc'
-    if os.path.exists(tocfilename):
-        # TODO: if ( tocfilename has changed) ...
+    if os.path.exists(tocfilename) and tocContents != open(tocfilename, "rb").read():
+        must_rerun_latex = 1
+
+    # Now decide if latex will need to be run again due to bibliography.
+    if os.path.exists(bblfilename) and bblContents != open(bblfilename, "rb").read():
+        must_rerun_latex = 1
+
+    # Now decide if latex will need to be run again due to index.
+    if os.path.exists(idxfilename) and idxContents != open(idxfilename, "rb").read():
+        # We must run makeindex
+        idxfile = env.fs.File(basename)
+        MakeIndexAction(idxfile, idxfile, env)
+        must_rerun_latex = 1
+
+    if must_rerun_latex == 1:
         XXXLaTeXAction(target, source, env)
 
-    # Now decide if latex needs to be run yet again.
+    # Now decide if latex needs to be run yet again to resolve warnings.
     logfilename = basename + '.log'
     for _ in range(int(env.subst('$LATEXRETRIES'))):
         if not os.path.exists(logfilename):
